@startuml

skinparam linetype ortho


rectangle #36827F{
class Building  << Root >> << Entity >>
class BuildingDescription  << (v,#A4C2E5) ValueObject >>
class BuildingName  << (v,orange) ValueObject >> << unique >>
}

rectangle #D499B9{
class Floor  << Root >> << Entity >>
class FloorNumber  << (v,orange) ValueObject >> << unique >>
class FloorDescription  << (v,#A4C2E5) ValueObject >>
class FloorMap  << Entity >>

}

Building "1"->"*" Floor
Building "*"-->"0..1" BuildingDescription
Building "1"-->"1" BuildingName



Floor "1"-d->"1" FloorMap
Floor "*"-u>"1" FloorNumber
Floor "*"->"1" FloorDescription


@enduml
